Add "remove paywall using" command

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     {
       "name": "remove-paywall",
       "title": "Remove Paywall",
+      "subtitle": "Remove the paywall from the specified URL.",
       "description": "Remove the paywall from the specified URL.",
       "mode": "no-view",
       "arguments": [
@@ -25,6 +26,13 @@
           "placeholder": "URL (or selected text)"
         }
       ]
+    },
+    {
+      "name": "remove-paywall-using",
+      "title": "Remove Paywall Using...",
+      "subtitle": "Specify a service to remove the paywall.",
+      "description": "Remove the paywall with the specified URL using an alternative service.",
+      "mode": "view"
     }
   ],
   "preferences": [
